--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 <IfModule mod_rewrite.c>
    RewriteEngine on
    #The same that the rewrite_base in config.ini and public/.htaccess
-   RewriteBase /tianguiscabal/
+   RewriteBase /TianguisCabal/
    RewriteRule  ^$ public/  [L]
    RewriteRule  (.*) public/$1  [L]
 </IfModule>
